# sgm_ed

./: CMakeLists.txt  README.md  VideoCapture.cpp  VideoCapture.hpp  c920settings.sh  edge.cpp  edge.h  edge.hpp  main.cpp
